CMBSandbox4/src/objects/Credit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credits</relationshipLabel>
        <relationshipName>Credits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved by</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Approved Credits</relationshipLabel>
        <relationshipName>Credit</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Open_Credit__c</fullName>
        <formula>Total_Credit_Amount__c &gt; Total_Credit_Amount_Applied__c
||
Total_Credit_Hours__c &gt; Total_Credit_Hours_Applied__c</formula>
        <label>Open Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>CMB Inefficiencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-sale Concession</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Credit_Amount_Applied__c</fullName>
        <label>Total Credit Amount Applied</label>
        <summarizedField>Credit_Line_Item__c.Amount_Credited__c</summarizedField>
        <summaryForeignKey>Credit_Line_Item__c.Credit__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Credit_Amount_Remaining__c</fullName>
        <formula>Total_Credit_Amount__c - Total_Credit_Amount_Applied__c</formula>
        <label>Total Credit Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Credit_Amount__c</fullName>
        <label>Total Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Credit_Hours_Applied__c</fullName>
        <label>Total Credit Hours Applied</label>
        <summarizedField>Credit_Line_Item__c.Hours_Credited__c</summarizedField>
        <summaryForeignKey>Credit_Line_Item__c.Credit__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Credit_Hours_Remaining__c</fullName>
        <formula>Total_Credit_Hours__c - Total_Credit_Hours_Applied__c</formula>
        <label>Total Credit Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Credit_Hours__c</fullName>
        <label>Total Credit Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Credit</label>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Credit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>